added draggable div - testing drag and drop

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>TV Tracker 2.0</title>
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body>
+    <div class="card-holder">
+      <div class="card" draggable="true">
+        <p>Let's drag this!</p>
+      </div>
+
+    </div>
 
   </body>
 </html>
