--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
-    <div class="card-holder">
-      <div class="card" draggable="true">
-        <p>Let's drag this!</p>
+    <div class="watch-board">
+      <div class="watch-column">
+        <div class="card" draggable="true">
+          <p>Let's drag this!</p>
+        </div>
       </div>
+      <div class="watch-column">
 
+      </div>
+      <div class="watch-column">
+
+      </div>
+      <div class="watch-column">
+
+      </div>
     </div>
 
   </body>
