--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
+    <script src="./main.js" charset="utf-8"></script>
     <div class="watch-board">
       <div class="watch-column">
-        <div class="card" draggable="true">
+        <div class="card" id="one" draggable="true">
           <p>Let's drag this!</p>
+        </div>
+        <div class="card" id="two" draggable="true">
+          <p>or this!</p>
+        </div>
+        <div class="card" id="three" draggable="true">
+          <p>or maybe this!</p>
         </div>
       </div>
       <div class="watch-column">
