down to three columns

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <p>Let's drag this!</p>
         </div>
         <div class="card" id="two" draggable="true">
-          <p>or this!</p>
+          <p>...or this!</p>
         </div>
         <div class="card" id="three" draggable="true">
-          <p>or maybe this!</p>
+          <p>...or maybe this!</p>
         </div>
       </div>
       <div class="watch-column">
@@ -24,10 +24,6 @@
       </div>
       <div class="watch-column">
 
-      </div>
-      <div class="watch-column">
-
-      </div>
     </div>
 
   </body>
